Moved tesseract.exe path to config.ini

--- a/config.example.ini
+++ b/config.example.ini
@@ -5,6 +5,7 @@ monitor=1
 json=True
 csv=False
 influx=True
+owstats=true
 
 [debug]
 log=False
@@ -16,3 +17,10 @@ url=http://127.0.0.1:8086
 token=super-secret-token
 org=influx-data
 bucket=overwatch
+
+[tesseract]
+EXE_LOCATION=S:\Program Files\Tesseract-OCR\\tesseract.exe
+
+[owstats]
+API_ENDPOINT=https://api.stage.owstats.app/api/games
+HEADER_AUTHORIZATION=Bearer <token here>
