Added player name in config.example.ini

--- a/config.example.ini
+++ b/config.example.ini
@@ -24,3 +24,4 @@ EXE_LOCATION=S:\Program Files\Tesseract-OCR\\tesseract.exe
 [owstats]
 API_ENDPOINT=https://api.stage.owstats.app/api/games
 HEADER_AUTHORIZATION=Bearer <token here>
+PLAYER_NAME=PLAYER NAME
